--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "koa": "2.2.0",
+    "koa-bodyparser": "4.2.0",
     "koa-compress": "2.0.0",
     "koa-conditional-get": "2.0.0",
     "koa-router": "7.1.1",
@@ -29,6 +30,7 @@
     "rollup-plugin-commonjs": "8.0.2",
     "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-svelte": "1.6.1",
-    "rollup-watch": "3.2.2"
+    "rollup-watch": "3.2.2",
+    "stripe": "4.17.1"
   }
 }
