My own router, I guess.  Also, body styles are dynamic now

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "koa-bodyparser": "4.2.0",
     "koa-compress": "2.0.0",
     "koa-conditional-get": "2.0.0",
-    "koa-router": "7.1.1",
     "koa-static": "3.0.0",
     "loud-rejection": "1.6.0",
+    "path-match": "1.2.4",
     "rollup-plugin-babel": "2.7.1",
     "rollup-plugin-commonjs": "8.0.2",
     "rollup-plugin-node-resolve": "3.0.0",
