--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "stripe-donation",
-  "private": true,
   "engines": {
     "node": ">=7.6.0"
   },
   "version": "1.0.0",
   "description": "",
-  "main": "server/server-index.js",
+  "main": "server/middleware.js",
+  "browser": "widget-build.js",
   "scripts": {
-    "build": "rollup -c -o public/build.js client/index.js",
-    "watch": "rollup -c -w --dev --sourcemap -o public/build.js client/index.js",
+    "build": "rollup -c -o widget-build.js client/index.js",
+    "watch": "rollup -c -w --dev --sourcemap -o widget-build.js client/index.js",
     "start": "node server.js",
     "startdev": "nodemon server.js"
   },
   "author": "TehShrike",
   "license": "WTFPL",
   "devDependencies": {
+    "babel-preset-es2015": "6.24.1",
     "nodemon": "1.11.0",
     "rollup": "0.41.6",
     "rollup-plugin-babel": "2.7.1",
@@ -25,15 +26,9 @@
     "rollup-watch": "3.2.2"
   },
   "dependencies": {
-    "koa": "2.2.0",
     "koa-bestest-router": "1.0.0",
-    "koa-bodyparser": "4.2.0",
-    "koa-compress": "2.0.0",
-    "koa-conditional-get": "2.0.0",
-    "koa-static": "3.0.0",
     "loud-rejection": "1.6.0",
     "nodemailer": "4.0.0",
-    "path-match": "1.2.4",
     "stripe": "4.17.1"
   }
 }
