--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   "author": "TehShrike",
   "license": "WTFPL",
   "devDependencies": {
-    "babel-preset-es2015": "6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "nodemon": "1.11.0",
-    "rollup": "0.41.6",
-    "rollup-plugin-babel": "2.7.1",
+    "rollup": "^0.57.1",
+    "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "8.0.2",
-    "rollup-plugin-node-resolve": "3.0.0",
-    "rollup-plugin-svelte": "1.6.1",
-    "rollup-watch": "3.2.2"
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-svelte": "1.6.1"
   },
   "dependencies": {
-    "koa-bestest-router": "1.0.0",
-    "loud-rejection": "1.6.0",
-    "nodemailer": "4.0.0",
-    "ordered-entries": "1.0.0",
-    "stripe": "4.17.1"
+    "koa-bestest-router": "^1.0.2",
+    "loud-rejection": "^1.6.0",
+    "nodemailer": "^4.6.4",
+    "ordered-entries": "^1.0.0",
+    "stripe": "~4.17.1"
   }
 }
